--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -115,32 +115,22 @@ jobs:
           build_id=${{ needs.release-package.outputs.package_name }}
           scp -o "StrictHostKeyChecking no" build-automation/*.py build-automation/*.sh build-automation/*.txt $INSTANCE_USERNAME@$instance_ip:$package_dir/
           ssh -oStrictHostKeyChecking=no $INSTANCE_USERNAME@$instance_ip "export NIGHTLY_GOLDEN_DIR=/home/$INSTANCE_USERNAME/e2e/golden; cd $package_dir; ./execute_e2e.sh $build_id e2e_resources.txt"
-#          set +e
-#          ssh -o "StrictHostKeyChecking no" $INSTANCE_USERNAME@$instance_ip "cd $artifacts_test_results_location; ./build_and_run_in_container.sh $package_path $artifacts_test_results_location /home/$INSTANCE_USERNAME/alus/resources"
-#          run_result=$?
-#          set -e
-#          set -x
-#          results_location_on_runner=$artifacts_test_results_location
-#          mkdir -p $results_location_on_runner
-#          scp -o "StrictHostKeyChecking no" -r $INSTANCE_USERNAME@$instance_ip:$artifacts_test_results_location/alus\*/\* $results_location_on_runner/
-#          echo "results_location=$results_location_on_runner" >> $GITHUB_OUTPUT
-#          exit $run_result
 
-#  stop-gpu-instance:
-#    name: Stop GPU instance
-#    runs-on: ubuntu-latest
-#    needs: [start-gpu-instance, end-to-end-testing]
-#    if: |
-#      always() &&
-#      needs.start-gpu-instance.result == 'success'
-#    steps:
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.SID_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.SID_SECRET_ACCESS_KEY }}
-#          aws-region: ${{ secrets.ALUS_SID_INSTANCE_REGION }}
-#      - uses: actions/checkout@v3
-#      - name: Stop GPU instance
-#        run: |
-#          $GITHUB_WORKSPACE/build-automation/stop_ec2_instance.sh ${{ secrets.ALUS_SID_INSTANCE_ID }}
+  stop-gpu-instance:
+    name: Stop GPU instance
+    runs-on: ubuntu-latest
+    needs: [start-gpu-instance, end-to-end-testing]
+    if: |
+      always() &&
+      needs.start-gpu-instance.result == 'success'
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.SID_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.SID_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.ALUS_ALEX_INSTANCE_REGION }}
+      - uses: actions/checkout@v3
+      - name: Stop GPU instance
+        run: |
+          $GITHUB_WORKSPACE/build-automation/stop_ec2_instance.sh ${{ secrets.ALUS_ALEX_INSTANCE_ID }}
