Retain original workflow, errors fixed.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -101,7 +101,8 @@ jobs:
         run: |
           instance_ip=${{ needs.start-gpu-instance.outputs.instance_ip }}
           package_filename=${{ needs.release-package.outputs.package_filename }}
-          instance_package_dir=/tmp/${{ needs.release-package.outputs.package_name }}
+          instance_package_dir=/tmp/${{ needs.release-package.outputs.package_name }} 
+          ssh -oStrictHostKeyChecking=no $INSTANCE_USERNAME@$instance_ip "rm -rf $instance_package_dir"
           ssh -o "StrictHostKeyChecking no" $INSTANCE_USERNAME@$instance_ip "mkdir $instance_package_dir"
           scp -o "StrictHostKeyChecking no" $package_filename $INSTANCE_USERNAME@$instance_ip:$instance_package_dir/
           echo "instance_package_dir=$instance_package_dir" >> $GITHUB_OUTPUT
@@ -116,21 +117,21 @@ jobs:
           scp -o "StrictHostKeyChecking no" build-automation/*.py build-automation/*.sh build-automation/*.txt $INSTANCE_USERNAME@$instance_ip:$package_dir/
           ssh -oStrictHostKeyChecking=no $INSTANCE_USERNAME@$instance_ip "export NIGHTLY_GOLDEN_DIR=/home/$INSTANCE_USERNAME/e2e/golden; export LD_LIBRARY_PATH=/usr/local/cuda-11.2/lib64/:\$LD_LIBRARY_PATH; cd $package_dir; ./execute_e2e.sh $build_id e2e_resources.txt"
 
-#  stop-gpu-instance:
-#    name: Stop GPU instance
-#    runs-on: ubuntu-latest
-#    needs: [start-gpu-instance, end-to-end-testing]
-#    if: |
-#      always() &&
-#      needs.start-gpu-instance.result == 'success'
-#    steps:
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.SID_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.SID_SECRET_ACCESS_KEY }}
-#          aws-region: ${{ secrets.ALUS_ALEX_INSTANCE_REGION }}
-#      - uses: actions/checkout@v3
-#      - name: Stop GPU instance
-#        run: |
-#          $GITHUB_WORKSPACE/build-automation/stop_ec2_instance.sh ${{ secrets.ALUS_ALEX_INSTANCE_ID }}
+  stop-gpu-instance:
+    name: Stop GPU instance
+    runs-on: ubuntu-latest
+    needs: [start-gpu-instance, end-to-end-testing]
+    if: |
+      always() &&
+      needs.start-gpu-instance.result == 'success'
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.SID_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.SID_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.ALUS_ALEX_INSTANCE_REGION }}
+      - uses: actions/checkout@v3
+      - name: Stop GPU instance
+        run: |
+          $GITHUB_WORKSPACE/build-automation/stop_ec2_instance.sh ${{ secrets.ALUS_ALEX_INSTANCE_ID }}
