--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI on AWS GPU instance
 
 on:
+  push:
+    branches: [ "actions" ]
+    max-concurrency: 1
   pull_request:
     branches: [ "development" ]
     max-concurrency: 1
