Unfinished CopDEM implementation from bitbucket.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ add_subdirectory(sentinel1)
 add_subdirectory(util/exotic-operations)
 add_subdirectory(util/common)
 add_subdirectory(util/cuda)
+add_subdirectory(util/dem)
 add_subdirectory(snap-engine)
 
 # Algorithms
