--- a/util/dem/unit-test/CMakeLists.txt
+++ b/util/dem/unit-test/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 list(APPEND DEM_UTIL_TEST_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/dem_assistant.cc
+        ${CMAKE_CURRENT_LIST_DIR}/copdem_cog_30m.cc
         )
 
 add_executable(dem-util-test ${DEM_UTIL_TEST_SOURCES})
