Changes from provisional branch for resampling and optimizations.

--- a/util/dem/CMakeLists.txt
+++ b/util/dem/CMakeLists.txt
@@ -3,7 +3,6 @@ list(APPEND DEM_UTIL_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/dem_assistant.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/dem_egm96.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/copdem_cog_30m.cc
-        ${CMAKE_CURRENT_LIST_DIR}/src/copdem_cog_30m_calc.cu
         )
 
 list(APPEND DEM_UTIL_INCLUDE_DIRS
@@ -28,6 +27,7 @@ target_link_libraries(dem-util-static
         exotic-operations-static
         snap-engine-static
         common-util-static
+        resample-static
         )
 
 if (ENABLE_TESTS)
