--- a/jupyter-notebook/requirements.txt
+++ b/jupyter-notebook/requirements.txt
@@ -1,3 +1,6 @@
+setuptools>=67.6.0
+validators>=0.20.0
+wheel>=0.40.0
 numpy>=1.24.0
 jupyterlab>=3.3
 ipywidgets>=7.6.5
@@ -9,6 +12,5 @@ sentineleof>=0.6.4
 # Currently there is a pull request https://github.com/pbrotoisworo/s1-tops-split-analyzer/pull/23 addressing unarchived .SAFE archive support
 # Therefore a fork of the repository is being used until the request is merged
 git+https://github.com/pbrotoisworo/s1-tops-split-analyzer.git
-wheel>=0.37.0
 pytest>=7.0.0
 tk
