--- a/util/math/CMakeLists.txt
+++ b/util/math/CMakeLists.txt
@@ -2,9 +2,13 @@
 list(APPEND MATH_UTIL_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/include)
 
-add_library(alus-math-static INTERFACE)
+add_library(math-util-static INTERFACE)
 
-target_include_directories(alus-math-static
+target_include_directories(math-util-static
         INTERFACE
         $<BUILD_INTERFACE:${MATH_UTIL_INCLUDE_DIRS}>
         $<INSTALL_INTERFACE:include>)
+
+if (ENABLE_TESTS)
+    add_subdirectory(unit-test)
+endif ()
